Early implementation of general continuations. Needs testing, but compiles and runs at least one network.
General continuations:
- Offering, ProcedureInvocation, and Condition behaviours can now optionally have continuations.
- When the above three gets reduced, their continuation (if it exists) gets put on a stack stored internally in each ProcessTerm.
- The stack gets considered when calculating the hashCode of the term.
- The check form WellFormedness now considers a network problematic if there is a continuation that can never be executed, or that a branch/procedure expects to return to a continuation, but there is none.

Changes to network classes:
- All Behaviours now have a continuation.
- The main field of ProcessTerm and continuation field of Behaviours are now package-private, but has public getters.
- Changed hashCode() for all behaviours to use XOR and cyclic bitshifts. The reason is so that the hashCode() that the main behaviour would have if the continuation stack was appended can be calculated without modifying any behaviour.
- Added two new "faux" Behaviour classes. One represents that the behaviour is incomplete and needs a continuation eventually, and the other represents that a continuation is possible, but not directly specified.

 Other changes:
 - Upgraded to Java 17 with preview features.
 - Mostly removed the ACTION field from NetworkASTNode, and replaced its usage with pattern matching, including the pattern matching in switch statements from Java 17's preview features.